Add subfigure support. -ZZ

--- a/mcmthesis_86865.tex
+++ b/mcmthesis_86865.tex
@@ -33,6 +33,10 @@
         titlepage = false, abstract = false}
 \usepackage{palatino}
 \usepackage{lipsum}
+%% subfig support
+\usepackage{graphicx}
+\usepackage{subcaption}
+%%
 \title{The \LaTeX{} Template for MCM Version \MCMversion}
 \author{\small \href{http://www.latexstudio.net/}
   {\includegraphics[width=7cm]{mcmthesis-logo}}}
