--- a/figures/aa.tex
+++ b/figures/aa.tex
@@ -1,7 +1,26 @@
 \begin{figure}[h]
 \small
 \centering
-\includegraphics[width=12cm]{mcmthesis-aaa-eps-converted-to.pdf}
-\caption{aa} 
+\begin{subfigure}[b]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{mcmthesis-aaa-eps-converted-to.pdf}
+	\caption{aa} 
+	\label{fig:aa1}
+\end{subfigure}
+\begin{subfigure}[b]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{mcmthesis-aaa-eps-converted-to.pdf}
+	\caption{aa} 
+	\label{fig:aa2}
+\end{subfigure}
+\begin{subfigure}[b]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{mcmthesis-aaa-eps-converted-to.pdf}
+	\caption{aa} 
+	\label{fig:aa3}
+\end{subfigure}
+\begin{subfigure}[b]{0.45\textwidth}
+	\includegraphics[width=\textwidth]{mcmthesis-aaa-eps-converted-to.pdf}
+	\caption{aa} 
+	\label{fig:aa4}
+\end{subfigure}
+\caption{Picture}
 \label{fig:aa}
 \end{figure}
