Add notation table template. -ZZ

--- a/model.tex
+++ b/model.tex
@@ -1,3 +1,17 @@
 
 \section{Calculating and Simplifying the Model  }
 \lipsum[11]
+
+\begin{table}
+	\begin{center}
+	\begin{tabular}{|l l|}
+		\hline
+		Symbol & Definition \\
+		\hline
+		$\lambda$ & This notation represents lambda \\
+		$\mu$ & This notation represents mu \\
+		\hline
+	\end{tabular}
+	\caption{Notations}		
+	\end{center}
+\end{table}
