--- a/figures/aa.tex
+++ b/figures/aa.tex
@@ -2,7 +2,7 @@
 \small
 \centering
 \begin{subfigure}[b]{0.45\textwidth}
-	\includegraphics[width=\textwidth]{mcmthesis-aaa-eps-converted-to.pdf}
+	\includegraphics[width=\textwidth]{graph.pdf_tex}
 	\caption{aa} 
 	\label{fig:aa1}
 \end{subfigure}
